--- a/web/main.xhtml
+++ b/web/main.xhtml
@@ -2,7 +2,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">>
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">>
 
 <h:head>
     <title>Третья лабораторная работа по веб-программированию | Основная страницы </title>
@@ -12,33 +13,6 @@
 </h:head>
 
 <h:body>
-<div class="contentRect animated zoomIn">
-    <div class="baseInsideRect taskRect">
-        Введите данные для определения вхождения точки в представленную область
-    </div>
-
-    <div class="baseInsideRect xRect">
-        <span class="baseLetter xLetter">X</span>
-        <h:selectOneRadio value = "#{userData.data}">
-            <f:selectItem itemValue = "1" itemLabel = "Item 1" />
-            <f:selectItem itemValue = "2" itemLabel = "Item 2" />
-            <f:selectItem itemValue = "3" itemLabel = "Item 2" />
-            <f:selectItem itemValue = "4" itemLabel = "Item 2" />
-            <f:selectItem itemValue = "5" itemLabel = "Item 2" />
-            <f:selectItem itemValue = "6" itemLabel = "Item 2" />
-            <f:selectItem itemValue = "7" itemLabel = "Item 2" />
-            <f:selectItem itemValue = "8" itemLabel = "Item 2" />
-            <f:selectItem itemValue = "9" itemLabel = "Item 2" />
-        </h:selectOneRadio>
-    </div>
-
-    <div class="baseInsideRect yRect">
-        <span class="baseLetter yLetter">Y</span>
-    </div>
-
-    <div class="baseInsideRect rRect">
-        <span class="baseLetter rLetter">R</span>
-    </div>
-</div>
+    <ui:include src="templates/main-form.xhtml" />;
 </h:body>
 </html>
