--- a/web/main.xhtml
+++ b/web/main.xhtml
@@ -3,16 +3,18 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">>
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
 <h:head>
     <title>Третья лабораторная работа по веб-программированию | Основная страницы </title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css" rel="stylesheet"/>
     <h:outputStylesheet library = "css" name = "general.css"  />
     <h:outputStylesheet library = "css" name = "main.css"  />
+    <h:outputStylesheet library = "css" name = "table.css"  />
 </h:head>
 
 <h:body>
     <ui:include src="templates/main-form.xhtml" />;
+    <ui:include src="templates/table.xhtml" />;
 </h:body>
 </html>
